<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Androidino</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="logar">Logar</string>
    
    <string name="sensorLegenda">Sensor de:</string>
    <string name="sensorMovimeto">Movimento</string>
    <string name="sensorFogo">Fogo</string>
    <string name="sensorTemp">Temperatura</string>
    <string name="ligaTodo">Ligar Alarme</string>
    <string name="desligaTodo">Desligar Alarme</string>
    <string name="app_Sensores">AndroiDino - Monitoramento</string>
    
    
    <string name="confIP">Conf. IP REMOTO</string>
    <string name="enviaToken">Enviar Token Twitter</string>
	<string name="gerarToken">Gerar Token Twitter</string>
	<string name="app_twitter">AndroiDino - Token TWITTER</string>
	
	<string name="RedsenhaAtual">Senha Atual:</string>
	<string name="RedsenhaNova">Nova Senha:</string>
	<string name="Redconfirmar">Confirmar Nova Senha:</string>
	<string name="Redbtnconfirmar">Confirmar</string>
	<string name="app_redesenha">AndroiDino - Redefinir Senha</string>
	
	<string name="comuEnderecoIP">IP ou Endereço de rede:</string>
	<string name="comuPorta">Porta:</string>
	<string name="comuConfirma">Confirmar</string>
	<string name="app_Comunicacao">AndroiDino - Cadastro IP/PORTA</string>
	
	<string name="cadNome">Nome: </string>
	<string name="cadSenha">Senha:</string>
	<string name="cadConfsenha">Confirmar Senha:</string>
	<string name="btnCadCadastro">Confirmar</string>
	<string name="btnCadDeleta">Deletar</string>
	<string name="app_cadastro">AndroiDino - Cadastro Usuário</string>

	<string name="app_mmInicial">AndroiDino - Menu Inicial</string>
	<string name="app_mmConf">AndroiDino - Menu Configuração</string>

	<string name="panico">PANICO!</string>
    		
</resources>
