<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/img"
    >
    
 	<TextView 
 	    android:id="@+id/txtRedSenhaAtual"
 	    android:text="@string/RedsenhaAtual"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    />
 	    
 	<EditText
        android:id="@+id/edtRedSenhaAtual"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <TextView 
 	    android:id="@+id/txtRedSenhaNova"
 	    android:text="@string/RedsenhaNova"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
    />
 	    
 	<EditText
        android:id="@+id/edtRedSenhaNova"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

    </EditText>
 	
 	
 	<TextView 
 	    android:id="@+id/txtRedConfirmar"
 	    android:text="@string/Redconfirmar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
    />
 	    
 	<EditText
        android:id="@+id/edtRedConfirmar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

    </EditText>
    
 	<Button
 	    android:id="@+id/btnRedConfirmar" 
 	    android:text="@string/Redbtnconfirmar"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	/>
 	
</LinearLayout>
 	    