<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtEnderecoIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comuEnderecoIP" />

    <EditText
        android:id="@+id/edtEnderecoIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtPorta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comuPorta" />

    <EditText
        android:id="@+id/edtPorta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Button
        android:id="@+id/btnConfimarComu"
        android:text="@string/comuConfirma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      />

</LinearLayout>